<resources>
    <string name="app_name">Recipe_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Instructions:</string>
    <string name="summary">Summary:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="change_your_password">Change your Password</string>
    <string name="change_your_name">Change your Name</string>
    <string name="change_profile_pic">Change profile Pic</string>
    <string name="log_out">Log Out</string>
    <string name="user_image">user_image</string>
    <string name="save">Save</string>
    <string name="enter_new_user_name">Enter new user name</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password:</string>
    <string name="random_recipes">Random Recipes:</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet</string>
    <string name="log_in">Log in</string>
    <string name="no_match_found">no match found</string>
    <string name="password">Password:</string>
    <string name="all_ready_have_an_account">All ready have an account</string>
    <string name="new_username">New Username:</string>
    <string name="search_for_recipes">Search for Recipes</string>

    <string-array name="cuisines">
        <item>African</item>
        <item>American</item>
        <item>British</item>
        <item>Cajun</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>Eastern European</item>
        <item>European</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Indian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Latin American</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Middle Eastern</item>
        <item>Nordic</item>
        <item>Southern</item>
        <item>Spanish</item>
        <item>Thai</item>
        <item>Vietnamese</item>
    </string-array>

    <string-array name="meal_types">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>
</resources>