<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.UserFragment"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        >

        <ImageView
            android:id="@+id/userFragment_user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/user_image"
            />

        <TextView
            android:id="@+id/userFragment_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Display User name"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:textSize="22sp"
            android:textColor="#151515"

            />
    </LinearLayout>

    <Button
        android:id="@+id/change_pic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_pic"
        android:textSize="22sp"
        android:textColor="#151515"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:icon="@drawable/ic_baseline_add_a_photo_24"
        app:iconTint="#000000"
        android:drawablePadding="15dp"
        android:textAllCaps="false"
        android:background="?attr/selectableItemBackground"
        />

    <Button
        android:id="@+id/change_username_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="15dp"
        android:text="@string/change_your_name"
        android:textAllCaps="false"
        android:textColor="#151515"
        android:textSize="22sp"
        app:icon="@drawable/ic_baseline_person_24"
        app:iconTint="#000000" />

    <Button
        android:id="@+id/change_password_button"
        app:icon="@drawable/ic_baseline_lock_24"
        app:iconTint="#000000"
        android:drawablePadding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/change_your_password"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:textColor="#151515"
        android:background="?attr/selectableItemBackground"
        />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:icon="@drawable/ic_baseline_exit_to_app_24"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#FFFF"

        />


</LinearLayout>