<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.LogInFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome Back "
        android:textSize="34sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Enter your email and password to sign in to your account"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_in_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email: "
            android:inputType="textEmailAddress"
            android:backgroundTint="@android:color/transparent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_in_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:backgroundTint="@android:color/transparent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textColor="@android:color/white"

        android:textAllCaps="false"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/don_t_have_an_account_yet"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        />
    <Button
        android:id="@+id/go_to_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="#FFFFFF"
        android:textAllCaps="false"
        />
</LinearLayout>