<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/popup_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/enter_new_password"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="italic"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:passwordToggleEnabled="true"
                android:layout_below="@+id/popup_password_title"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/popup_password_oldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:backgroundTint="@android:color/transparent"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:passwordToggleEnabled="true"
                android:layout_below="@+id/layout_one"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/popup_password_newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:backgroundTint="@android:color/transparent"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/popup_password_error_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_two"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/popup_password_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/popup_password_error_textview"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>